<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:id="@+id/scrollMenu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/mine" />

        <Button
            android:background="@drawable/red_button"
            android:text="@string/play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_play"
            style="@style/Btn_Menu"
            />

        <Button
            android:background="@drawable/red_button"
            android:text="@string/scores"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_scores"
            style="@style/Btn_Menu"
            />

        <Button
            android:background="@drawable/red_button"
            android:text="@string/rules"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_rules"
            style="@style/Btn_Menu"
            />


    </LinearLayout>



</ScrollView>
</RelativeLayout>