<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:id="@+id/scrollMenu">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nbrCols"
                android:paddingBottom="20dp"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_less"
                    android:tag="remove"
                    android:onClick="changeColsNbr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="40dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:id="@+id/tv_nbrCols"
                    />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_more"
                    android:tag="add"
                    android:onClick="changeColsNbr" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nbrRows"
                android:paddingBottom="20dp"
                android:paddingTop="30dp"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_less"
                    android:tag="remove"
                    android:onClick="changeRowsNbr"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="40dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:id="@+id/tv_nbrRows"
                    />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_more"
                    android:tag="add"
                    android:onClick="changeRowsNbr"
                    />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nbrMines"
                android:paddingBottom="20dp"
                android:paddingTop="30dp"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:paddingBottom="30dp"
                >

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_less"
                    android:tag="remove"
                    android:onClick="changeMinesNbr"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:id="@+id/tv_nbrMines"
                    android:textSize="40dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_more"
                    android:tag="add"
                    android:onClick="changeMinesNbr"
                    />


            </LinearLayout>

            <Button
                android:background="@drawable/red_button"
                android:text="@string/play"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_play"
                style="@style/Btn_Menu"
                android:onClick="playGameWithParams" />




        </LinearLayout>



    </ScrollView>


</RelativeLayout>